nginx/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: nginx
  kubectl --context "$wds_context" apply -f - <<EOF
apiVersion: control.kubestellar.io/v1alpha1
kind: BindingPolicy
metadata:
  name: nginx-bpolicy
spec:
  clusterSelectors:
  - matchLabels:
      name: cluster2
  downsync:
  - objectSelectors:
    - matchLabels:
        kunal: kunal
EOF


kubectl --context "$wds_context" apply -f - <<EOF
apiVersion: control.kubestellar.io/v1alpha1
kind: BindingPolicy
metadata:
  name: nginx-bpolicy
spec:
  clusterSelectors:
  - matchLabels: {"name":"cluster2"}
  downsync:
  - objectSelectors:
    - matchLabels: {"kubernetes.io/kubestellar.workload.name":"nginx"}
EOF
